# django-app

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  hello.py  pyproject.toml
core/: settings.py  urls.py
nginx/: Dockerfile  nginx.conf
products/: models.py  urls.py  views.py
products/migrations/: 0001_initial.py
scripts/: entrypoint.sh  start.sh
